[gd_scene load_steps=5 format=3 uid="uid://cmxdie8w8t606"]

[ext_resource type="Script" path="res://scenes/battle/start_turn_screen.gd" id="1_unjpi"]
[ext_resource type="Texture2D" uid="uid://cvvmmvsg8e2yn" path="res://assets/wheel/wheel_base.png" id="2_r0ncn"]
[ext_resource type="PackedScene" uid="uid://ryd6fkbgff77" path="res://scenes/wheel/slice.tscn" id="2_ws5h1"]
[ext_resource type="Script" path="res://scenes/battle/place_for_action.gd" id="5_pb0uu"]

[node name="FadeOut" type="ColorRect"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 10
size_flags_vertical = 3
mouse_filter = 1
mouse_force_pass_scroll_events = false
color = Color(0, 0, 0, 1)
script = ExtResource("1_unjpi")

[node name="underlay" type="TextureRect" parent="."]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(256, 256)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.25
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(128, 128)
texture = ExtResource("2_r0ncn")
expand_mode = 1

[node name="slice_gimbal" type="Control" parent="."]
unique_name_in_owner = true
z_index = 1
texture_filter = 1
layout_mode = 1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.25
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
mouse_filter = 1

[node name="slice1" parent="slice_gimbal" instance=ExtResource("2_ws5h1")]
layout_mode = 1
mouse_filter = 1
mod = 1.0

[node name="slice2" parent="slice_gimbal" instance=ExtResource("2_ws5h1")]
layout_mode = 1
rotation = 1.0472
mouse_filter = 1
mod = 2.0

[node name="slice3" parent="slice_gimbal" instance=ExtResource("2_ws5h1")]
layout_mode = 1
rotation = 2.0944
mouse_filter = 1

[node name="slice4" parent="slice_gimbal" instance=ExtResource("2_ws5h1")]
layout_mode = 1
rotation = 3.14159
mouse_filter = 1
mod = 1.0

[node name="slice5" parent="slice_gimbal" instance=ExtResource("2_ws5h1")]
layout_mode = 1
rotation = 4.18879
mouse_filter = 1
mod = 2.0

[node name="slice6" parent="slice_gimbal" instance=ExtResource("2_ws5h1")]
layout_mode = 1
rotation = 5.23599
mouse_filter = 1
mod = 0.5

[node name="to_place" type="Control" parent="."]
z_index = 1
anchors_preset = 0
scale = Vector2(1.5, 1.5)
mouse_filter = 1

[node name="Place1" type="Control" parent="."]
z_index = 1
layout_mode = 1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.25
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
mouse_filter = 1

[node name="Place3" type="Control" parent="."]
z_index = 1
layout_mode = 1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.25
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rotation = 2.0944
scale = Vector2(1.5, 1.5)
mouse_filter = 1

[node name="Place5" type="Control" parent="."]
z_index = 1
layout_mode = 1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.25
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rotation = 4.18879
scale = Vector2(1.5, 1.5)
mouse_filter = 1

[node name="Place6" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.25
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -168.0
offset_right = -94.0
offset_bottom = -58.0
rotation = 0.523599
scale = Vector2(1.5, 1.5)
mouse_filter = 2
script = ExtResource("5_pb0uu")
target_coords = Vector2(288, 325)
target_degrees = 270

[node name="Place2" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.25
anchor_bottom = 0.5
offset_left = 76.0
offset_top = -136.0
offset_right = 124.0
offset_bottom = -28.0
rotation = -0.523599
scale = Vector2(1.5, 1.5)
mouse_filter = 2
script = ExtResource("5_pb0uu")
target_coords = Vector2(288, 325)
target_degrees = 90

[node name="Place4" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.25
anchor_top = 0.5
anchor_right = 0.25
anchor_bottom = 0.5
offset_left = -87.0
offset_top = 140.0
offset_right = 28.0
offset_bottom = 177.0
scale = Vector2(1.5, 1.5)
mouse_filter = 2
script = ExtResource("5_pb0uu")
target_coords = Vector2(288, 325)
target_degrees = 180
